--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,8 +8,8 @@
     {{ if eq .Section "novatec-construccion" }}
       <a href="/novatec-construccion/"><img src="/images/logos/NC.png" alt="Logo Description" class="header-logo"></a>
     {{ else }}
-      <a href="/">
-        <img src="/logo.svg" alt="Novatec" class="header-logo">
+      <a class="header-logo-link" href="/">
+        <img width="178" height="49" src="/logo.svg" alt="Novatec" class="header-logo">
       </a>
     {{ end }}
   </div>
