Two fields in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -88,31 +88,9 @@
       <input type="email" name="email" />
       <label for="nombre">Nombre</label>
       <input type="text" name="nombre" />
-      <label for="apellido">Apellido</label>
-      <input type="text" name="nombre" />
-      <label for="empresa">Empresa</label>
-      <input type="text" name="empresa" />
-      <label for="puesto">Puesto</label>
-      <input type="text" for="puesto" />
-      <label for="segmento_industria">Segmento de la industria</label>
-      <select id="segmento_industria" class="" name="segmento_industria">
-        <option value="">- Seleccione una industria -</option>
-        <option value="Alimentos y Bebidas">Alimentos y Bebidas</option>
-        <option value="Dispositivos Médicos">Dispositivos Médicos</option>
-        <option value="Energía">Energía</option>
-        <option value="Farmacéuticos">Farmacéuticos</option>
-        <option value="Industria Pesada">Industria Pesada</option>
-        <option value="Papelera">Papelera</option>
-        <option value="Contratistas">Contratistas</option>
-        <option value="Electrónica">Electrónica</option>
-        <option value="Refinería">Refinería</option>
-        <option value="Químicos">Químicos</option>
-        <option value="Ingenios">Ingenios</option>
-        <option value="Integradores">Integradores</option>
-        <option value="Agrícola">Agrícola</option>
-        <option value="Otros">Otros</option>
-      </select>
+      <div style="margin-top: 15px">
       <input type="submit" class="btn-primary" value="enviar" />
+      </div>
     </form>
   </section>
 </div>
