--- a/assets/scss/pages/_marca.scss
+++ b/assets/scss/pages/_marca.scss
@@ -7,23 +7,14 @@
 }
 
 .marca-page-logo-content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
   padding: 5px;
+  overflow: hidden;
 }
 
 .marca-page-logo {
-  position: relative;
-
-  &:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-  }
 }
 
 .marca-page-info {
