Display current year on footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -96,7 +96,7 @@
 </div>
   <div class="legal-footer">
     <div class="container">
-      Copyright © 2017 Novatec Industrial. Todos los derechos reservados.
+      Copyright ©{{ .Date.Format "2006" }} Novatec Industrial. Todos los derechos reservados.
     </div>
   </div>
 </footer>
