For for servicio técnico

--- a/layouts/productos/single.html
+++ b/layouts/productos/single.html
@@ -26,7 +26,7 @@
             {{ partial "marca-logo.html" . }}
           </div>
         {{ end }}
-        {{ partial "contact-form.html" (dict "producto" .Title ) }}
+        {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Le interesa este producto?" ) }}
       </section>
     </div>
   </div>
