--- a/layouts/partials/contact-form.html
+++ b/layouts/partials/contact-form.html
@@ -1,5 +1,5 @@
 <div class="contact-form-container">
-  <h3>¿Le interesa este producto?</h3>
+  <h3>{{ .formTitle }}</h3>
   <p>Escríbanos</p>
   <form class="internal-contact-form" name="Contacto Página Producto" action="/gracias" netlify-honeypot="adios" netlify>
     <p class="visually-hidden">
