--- a/layouts/servicio-tecnico/list.html
+++ b/layouts/servicio-tecnico/list.html
@@ -4,20 +4,25 @@
 
 {{ define "main" }}
   <div class="container">
-    <div class="full-width-div">
-      {{ .Content }}
-      <ul class="areas-list">
-        {{ range .Params.areas }}
-          <li>
-            <h4 class="area-title">{{ .title }}</h4>
-            <div class="areas-imagenes">
-              {{ range .items }}
-                <img src="{{ . }}" class="areas-imagen" />
-              {{ end }}
-            </div>
-          </li>
-        {{ end }}
-      </ul>
+    <div class="grid-container">
+      <section id="producto-main">
+        {{ .Content }}
+        <ul class="areas-list">
+          {{ range .Params.areas }}
+            <li>
+              <h4 class="area-title">{{ .title }}</h4>
+              <div class="areas-imagenes">
+                {{ range .items }}
+                  <img src="{{ . }}" class="areas-imagen" />
+                {{ end }}
+              </div>
+            </li>
+          {{ end }}
+        </ul>
+      </section>
+        <section id="marca">
+          {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Necesita de nuestro servicios?" ) }}
+        </section>
     </div>
   </div>
   <script>
