Get form name from form fields

--- a/layouts/partials/contact-form.html
+++ b/layouts/partials/contact-form.html
@@ -15,6 +15,7 @@
     <input type="text" name="tel"/>
     <label for="mensaje">Mensaje</label>
     <input type="hidden" value="{{ .producto }}" name="producto" />
+    <input type="hidden" value="{{ .form }}" name="form" />
     <textarea name="mensaje"></textarea>
     <input type="submit" class="btn-primary" value="Enviar" />
   </form>
