--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -88,6 +88,7 @@
       <input type="email" name="email" />
       <label for="nombre">Nombre</label>
       <input type="text" name="nombre" />
+      <input type="hidden" value="novatec_industrial_boletin" name="form" />
       <div style="margin-top: 15px">
       <input type="submit" class="btn-primary" value="enviar" />
       </div>
