--- a/layouts/servicio-tecnico/list.html
+++ b/layouts/servicio-tecnico/list.html
@@ -21,7 +21,7 @@
         </ul>
       </section>
         <section id="marca">
-          {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Necesita de nuestro servicios?" ) }}
+          {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Necesita de nuestro servicios?" "form" "novatec_industial_web_products_req" ) }}
         </section>
     </div>
   </div>
