--- a/layouts/productos/single.html
+++ b/layouts/productos/single.html
@@ -26,7 +26,7 @@
             {{ partial "marca-logo.html" . }}
           </div>
         {{ end }}
-        {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Le interesa este producto?" ) }}
+        {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Le interesa este producto?" "form" "novatec_industial_web_products_req" ) }}
       </section>
     </div>
   </div>
