Cambio de logo para 20 años en header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,7 +9,7 @@
       <a href="/novatec-construccion/"><img src="/images/logos/NC.png" alt="Logo Description" class="header-logo"></a>
     {{ else }}
       <a class="header-logo-link" href="/">
-        <img width="178" height="49" src="/logo.svg" alt="Novatec" class="header-logo">
+        <img width="178" height="49" src="/LogoNI20.jpg" alt="Novatec" class="header-logo">
       </a>
     {{ end }}
   </div>
