Se agrega el logo de whatsapp

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -49,10 +49,20 @@
         </svg> 
         +506 2239-1212</li>
       <li>
-        <a href="https://wa.me/50663836383">
+        <!-- <a href="https://wa.me/50663836383">
           <i class="fa fa-whatsapp"></i>
           Escribinos por Whatsapp
-        </a>
+        </a> -->
+
+      <div class="wa-message-us"
+            number="50663836383"
+            label="Contáctenos por WhatsApp"
+            color="green"
+            size="standard"
+            border_radius="4px">
+      <script src="https://cdn.smooch.io/whatsapp/message-us-btn.min.js" type="text/javascript"></script>
+      </div>
+
       </li>
       <li>
         {{ if eq .Section "novatec-construccion" }}
