Change reference to nvtc

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -263,3 +263,11 @@
     display: none;
   }
 }
+
+#header-logo-industrial-link {
+  margin-left: 20px;
+}
+
+.go-to-construccion-li {
+  background-color: #f1653a;
+}
