--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,101 +1,83 @@
 <footer id="footer">
   <div class="container">
-  <section class="footer-section">
-    {{ if eq .Section "novatec-construccion" }}
-      <h3>NVTConstucción S.A.</h3>
-    {{ else }}
+    <section class="footer-section">
       <h3>Novatec Industrial S.A.</h3>
-    {{ end }}
-
-    <p>
-      <svg viewBox="0 0 8 8" class="icon">
-        <use xlink:href="/open-iconic.svg#globe"></use>
-      </svg> 
-      De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.
-    </p>
-    <p>
-      <a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank" rel="noopener noreferrer">
+      <p>
         <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="/open-iconic.svg#map-marker"></use>
-        </svg> 
-        Abrir en Google Maps
-      </a>
-    </p>
-    <p>
-      <a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes" rel="noopener noreferrer">
-        <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="/open-iconic.svg#location"></use>
-        </svg> 
-        Abrir en Waze
-      </a>
-    </p>
-  </section>
-  <section class="footer-section">
-    <h3>Contacto</h3>
-    <ul>
-      <li>
-        <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="/open-iconic.svg#inbox"></use>
-        </svg> 
-        650-4005 Belén, Heredia, Costa Rica.</li>
-      <li>
-        <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="/open-iconic.svg#phone"></use>
-        </svg> 
-        +506 2239-1111</li>
-      <li>
-        <svg viewBox="0 0 8 8" class="icon">
-          <use xlink:href="/open-iconic.svg#phone"></use>
-        </svg> 
-        +506 2239-1212</li>
-      <li>
-        <!-- <a href="https://wa.me/50663836383">
-          <i class="fa fa-whatsapp"></i>
-          Escribinos por Whatsapp
-        </a> -->
-
-      <div class="wa-message-us"
-            number="50663836383"
-            label="Contáctenos por WhatsApp"
-            color="green"
-            size="standard"
-            border_radius="4px">
-      <script src="https://cdn.smooch.io/whatsapp/message-us-btn.min.js" type="text/javascript"></script>
-      </div>
-
-      </li>
-      <li>
-        {{ if eq .Section "novatec-construccion" }}
-          {{ $email := "ventas-nc@novatec.cr" }}
-          <a href="mailto:{{ $email }}" target="_top">
-            <svg viewBox="0 0 8 8" class="icon">
-              <use xlink:href="/open-iconic.svg#envelope-closed"></use>
-            </svg>  {{ $email }}
-          </a>
-        {{ else }}
+          <use xlink:href="/open-iconic.svg#globe"></use>
+        </svg>
+        De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa
+        Rica.
+      </p>
+      <p>
+        <a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es"
+          target="_blank" rel="noopener noreferrer">
+          <svg viewBox="0 0 8 8" class="icon">
+            <use xlink:href="/open-iconic.svg#map-marker"></use>
+          </svg>
+          Abrir en Google Maps
+        </a>
+      </p>
+      <p>
+        <a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes"
+          rel="noopener noreferrer">
+          <svg viewBox="0 0 8 8" class="icon">
+            <use xlink:href="/open-iconic.svg#location"></use>
+          </svg>
+          Abrir en Waze
+        </a>
+      </p>
+    </section>
+    <section class="footer-section">
+      <h3>Contacto</h3>
+      <ul>
+        <li>
+          <svg viewBox="0 0 8 8" class="icon">
+            <use xlink:href="/open-iconic.svg#inbox"></use>
+          </svg>
+          650-4005 Belén, Heredia, Costa Rica.
+        </li>
+        <li>
           {{ $email := "info@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
             <svg viewBox="0 0 8 8" class="icon">
               <use xlink:href="/open-iconic.svg#envelope-closed"></use>
-            </svg> 
+            </svg>
             {{ $email }}
           </a>
-        {{ end }}
-      </li>
-      <li>
-        {{ if eq .Section "novatec-construccion" }}
-
-        {{ else }}
+        </li>
+        <li>
           {{ $email := "ventas@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
             <svg viewBox="0 0 8 8" class="icon">
               <use xlink:href="/open-iconic.svg#envelope-closed"></use>
-            </svg> 
+            </svg>
             {{ $email }}
           </a>
-        {{ end }}
-      </li>
-    </ul>
+        </li>
+        <li>
+          <svg viewBox="0 0 8 8" class="icon">
+            <use xlink:href="/open-iconic.svg#phone"></use>
+          </svg>
+          +506 2239-1111
+        </li>
+        <li>
+          <svg viewBox="0 0 8 8" class="icon">
+            <use xlink:href="/open-iconic.svg#phone"></use>
+          </svg>
+          +506 2239-1212
+        </li>
+        <li>
+        </li>
+        <li>
+
+          <div class="wa-message-us" number="50663836383" label="Contáctenos por WhatsApp" color="green" size="standard"
+            border_radius="4px">
+        </li>
+      </ul>
+
+      <script src="https://cdn.smooch.io/whatsapp/message-us-btn.min.js" type="text/javascript"></script>
+  </div>
   </section>
   <section class="footer-section">
     <h3>Redes Sociales</h3>
@@ -113,11 +95,11 @@
       <input type="text" name="nombre" />
       <input type="hidden" value="novatec_industrial_boletin" name="form" />
       <div style="margin-top: 15px">
-      <input type="submit" class="btn-primary" value="enviar" />
+        <input type="submit" class="btn-primary" value="enviar" />
       </div>
     </form>
   </section>
-</div>
+  </div>
   <div class="legal-footer">
     <div class="container">
       Copyright ©{{ .Date.Format "2006" }} Novatec Industrial. Todos los derechos reservados.
