--- a/layouts/productos/single.html
+++ b/layouts/productos/single.html
@@ -1,47 +1,59 @@
 {{ define "custom-css"}}
-  {{ with .Params.galeria }}
-    <!-- Agregar hoja de estilos exclusiva para slick -->
-  {{ end }}
+{{ with .Params.galeria }}
+<!-- Agregar hoja de estilos exclusiva para slick -->
+{{ end }}
 {{ end }}
 
 {{ define "page-title"}}
-  {{ partial "page-title.html" .}}
+{{ partial "page-title.html" .}}
 {{ end }}
 
 {{ define "main" }}
-  <div class="container">
-    <div class="grid-container">
-      <section id="producto-main">
-        {{ with .Params.galeria }}
-          {{ partial "product-image-gallery.html" ( dict "dir" $.Site.Params.cloudinary_url "imgs" . ) }}
-        {{ end }}
-        
-        {{ .Content }}
-      </section>
-      <section id="marca">
-        {{ $path := (print "/marcas/" (urlize (index .Params.marcas 0)) ) }}
-        {{ $brand := $.Site.GetPage $path }}
-        {{ with $brand }}
-          <div class="marca-page-logo">
-            {{ partial "marca-logo.html" . }}
-          </div>
-        {{ end }}
-        {{ partial "contact-form.html" (dict "producto" .Title "formTitle" "¿Le interesa este producto?" "form" "novatec_industial_web_products_req" ) }}
-      </section>
-    </div>
+<div class="container">
+  <div class="grid-container">
+    <section id="producto-main">
+      {{ with .Params.galeria }}
+      {{ partial "product-image-gallery.html" ( dict "dir" $.Site.Params.cloudinary_url "imgs" . ) }}
+      {{ end }}
+
+      {{ .Content }}
+    </section>
+    <section id="marca">
+      {{ if isset .Params "marcas" }}
+      {{ $marcas := .Params.marcas }}
+      {{ if gt (len $marcas) 0 }}
+      {{ $path := (print "/marcas/" (urlize (index $marcas 0))) }}
+      {{ $brand := $.Site.GetPage $path }}
+      {{ with $brand }}
+      <div class="marca-page-logo">
+        {{ partial "marca-logo.html" . }}
+      </div>
+      {{ end }}
+      {{ else }}
+      <!-- No hay marcas en este producto -->
+      {{ end }}
+      {{ else }}
+      <!-- No hay marcas en este producto -->
+      {{ end }}
+      {{ $producto := .Title }}
+      {{ $formTitle := "¿Le interesa este producto?" }}
+      {{ $form := "novatec_industial_web_products_req" }}
+      {{ partial "contact-form.html" (dict "producto" $producto "formTitle" $formTitle "form" $form) }}
+    </section>
   </div>
+</div>
 {{ end }}
 
 {{ define "scripts"}}
-  {{ with .Params.galeria }}
-    <script type="text/javascript" src="/js/slick.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('#product-gallery').slick({
-          dots: true,
-          adaptiveHeight: true,
-        });
-      });
-    </script>
-  {{ end }}
+{{ with .Params.galeria }}
+<script type="text/javascript" src="/js/slick.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $('#product-gallery').slick({
+      dots: true,
+      adaptiveHeight: true,
+    });
+  });
+</script>
+{{ end }}
 {{ end }}
