--- a/layouts/partials/noticias-home.html
+++ b/layouts/partials/noticias-home.html
@@ -7,23 +7,22 @@
       {{ $featured := where .Data.Pages "Params.featured" true }}
       {{ $filtered := $noticias | intersect $featured }}
       {{ range first 4 $filtered }}
-         <li>
-           <a class="noticia-image-link" href="{{ .Permalink }}">
-             <div class="noticia-imagen-container">
-                <img
-                  class="lazy"
-                  data-src="{{ $.Site.Params.cloudinary_url }}f_auto,w_260,h_195,c_fill{{ .Params.imagen_intro }}" 
-                  alt="{{ .Title }}" />
-             </div>
-           </a>
-           <a class="noticia-title" href="{{ .Permalink }}">
-             {{ .Title }}
-             <br/>
-             <span class="noticia-fecha">
-               {{ replace (dateFormat "2 #mes#, 2006" .Date) "#mes#" (index $.Site.Data.meses (dateFormat "Jan" .Date)) }}
-              </span>
-           </a>
-         </li>
+      <li>
+        <a class="noticia-image-link" href="{{ .Permalink }}">
+          <div class="noticia-imagen-container">
+            <img class="lazy"
+              data-src="{{ $.Site.Params.cloudinary_url }}c_thumb,w_260,h_195,c_pad{{ .Params.imagen_intro }}"
+              alt="{{ .Title }}" />
+          </div>
+        </a>
+        <a class="noticia-title" href="{{ .Permalink }}">
+          {{ .Title }}
+          <br />
+          <span class="noticia-fecha">
+            {{ replace (dateFormat "2 #mes#, 2006" .Date) "#mes#" (index $.Site.Data.meses (dateFormat "Jan" .Date)) }}
+          </span>
+        </a>
+      </li>
       {{ end }}
     </ul>
   </div>
