--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,16 +38,7 @@
           650-4005 Belén, Heredia, Costa Rica.
         </li>
         <li>
-          {{ $email := "info@novatec.cr" }}
-          <a href="mailto:{{ $email }}" target="_top">
-            <svg viewBox="0 0 8 8" class="icon">
-              <use xlink:href="/open-iconic.svg#envelope-closed"></use>
-            </svg>
-            {{ $email }}
-          </a>
-        </li>
-        <li>
-          {{ $email := "ventas@novatec.cr" }}
+          {{ $email := "sac@novatec.cr" }}
           <a href="mailto:{{ $email }}" target="_top">
             <svg viewBox="0 0 8 8" class="icon">
               <use xlink:href="/open-iconic.svg#envelope-closed"></use>
