remove cloudinary_url from product image gallery

--- a/layouts/partials/product-image-gallery.html
+++ b/layouts/partials/product-image-gallery.html
@@ -1,7 +1,7 @@
 <div style="padding: 0 30px;">
   <div id="product-gallery">
     {{ range .imgs }}
-      <img src="{{ $.dir }}{{ . }}" />
+    <img src="{{ . }}" />
     {{ end }}
   </div>
 </div>
