--- a/layouts/marcas/section.html
+++ b/layouts/marcas/section.html
@@ -1,22 +1,22 @@
 {{ define "page-title"}}
-  {{ partial "page-title.html" .}}
+{{ partial "page-title.html" .}}
 {{ end }}
 
 {{ define "main" }}
-  <div class="container">
-    <ul class="product-grid">
-      {{ range .Pages }}
-        <li class="product-grid-block">
-          <a href="{{ .Permalink }}">
-            <div class="product-grid-image">
-              <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.logo }}" alt="{{ .Title }}" />
-            </div>
-            <div class="product-block-title">
-              <h3>{{ .Title }}</h3>
-            </div>
-          </a>
-        </li>
-      {{ end }}
-    </ul>
-  </div>
+<div class="container">
+  <ul class="product-grid">
+    {{ range .Pages }}
+    <li class="product-grid-block">
+      <a href="{{ .Permalink }}">
+        <div class="product-grid-image">
+          <img src="{{ .Params.logo }}" alt="{{ .Title }}" />
+        </div>
+        <div class="product-block-title">
+          <h3>{{ .Title }}</h3>
+        </div>
+      </a>
+    </li>
+    {{ end }}
+  </ul>
+</div>
 {{ end }}
