--- a/layouts/partials/product-block.html
+++ b/layouts/partials/product-block.html
@@ -1,7 +1,7 @@
 <li class="product-grid-block">
   <a href="{{ .Permalink }}">
     <div class="product-grid-image">
-      <img src="{{ $.Site.Params.cloudinary_url }}{{ .Params.imagen }}" alt="{{ .Title }}" />
+      <img src="{{ .Params.imagen }}" alt="{{ .Title }}" />
     </div>
     <div class="product-block-title">
       <h3>{{ .Title }}</h3>
