--- a/layouts/partials/marca-logo.html
+++ b/layouts/partials/marca-logo.html
@@ -1,8 +1,10 @@
 <div class="marca-page-logo-content">
-  <img src="{{ $.Site.Params.cloudinary_url }}f_auto,w_280,h_280,c_fit,q_80{{ .Params.logo }}" alt="{{ .Title }}" />
+  {{ $img_params := "f_auto,w_280,h_280,c_fit,q_80" }}
+  {{ $img_url := partial "cloudinary-img.html" (dict "url" .Params.imagen "params" $img_params) }}
+  <img src="{{ $img_url | safeURL }}" alt="{{ .Title }}">
 </div>
 <div class="text-center">
   <a href="{{ .Params.link}}" target="_blank" rel="noopener noreferrer" class="small-text">
     <i class="fa fa-globe"></i> Ir al sitio de {{ .Title }}</a>
-    <br/><br/>
+  <br /><br />
 </div>
