--- a/layouts/partials/marcas-home.html
+++ b/layouts/partials/marcas-home.html
@@ -4,21 +4,17 @@
     <ul>
       {{ $.Scratch.Set "marcas" ($.Site.GetPage "taxonomyTerm" "marcas").Pages }}
       {{ range $.Scratch.Get "marcas" }}
-        {{ $marca := . }}
-        {{ with .Params.logo }}
-          <li>
-            <a href="{{ $marca.Params.link }}" 
-               target="_blank" 
-               rel="noopener noreferrer"
-               title="Haga click para visitar el sitio web de {{ $marca.Title }}">
-              <img
-                 class="lazy"
-                 data-src="{{ $.Site.Params.cloudinary_url }}f_auto,w_108,h_108,c_fit,q_80{{ . }}" 
-                 width="108" 
-                 alt="{{ $marca.Title }}" />
-            </a>
-          </li>
-        {{ end }} 
+      {{ $marca := . }}
+      {{ with .Params.logo }}
+      <li>
+        <a href="{{ $marca.Params.link }}" target="_blank" rel="noopener noreferrer"
+          title="Haga click para visitar el sitio web de {{ $marca.Title }}">
+          {{ $img_params := "f_auto,w_108,h_108,c_fit,q_80" }}
+          {{ $img_url := partial "cloudinary-img.html" (dict "url" . "params" $img_params) }}
+          <img class="lazy" data-src="{{ $img_url | safeURL }}" width="108" alt="{{ $marca.Title }}" />
+        </a>
+      </li>
+      {{ end }}
       {{ end }}
     </ul>
   </div>
