--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,9 +5,9 @@
     </svg>
   </a>
   <div class="header-logo-container">
-    <a class="header-logo-link" href="/">
-      <img width="178" height="49" src="/logo.svg" alt="Novatec" class="header-logo">
-    </a>
+      <a class="header-logo-link" href="/">
+        <img width="178" height="49" src="/logo.svg" alt="Novatec" class="header-logo">
+      </a>
   </div>
   <nav id="main-nav" role="navigation">
     <div class="cerrar-main-nav">
@@ -17,29 +17,28 @@
     {{ $currentPage := . }}
     <ul class="first-level">
       {{ range .Site.Menus.principal }}
-      {{ if .HasChildren }}
-      <li class="first-level-item{{if or ($currentPage.HasMenuCurrent " principal" .)
-        ($currentPage.IsMenuCurrent "principal" .) }} active{{end}}">
-        <a class="first-level-link" href="{{.URL}}">
-          {{ .Name }}
-          <svg viewBox="0 0 8 8" class="caret">
-            <use xlink:href="/open-iconic.svg#caret-bottom"></use>
-          </svg>
-        </a>
-        <ul class="second-level">
-          {{ range .Children.ByWeight }}
-          <li class="second-level-item{{if $currentPage.IsMenuCurrent " principal" . }} active{{end}}">
-            <a class="second-level-link" href="{{.URL}}"> {{ .Name }}</a>
+        {{ if .HasChildren }}
+          <li class="first-level-item{{if or ($currentPage.HasMenuCurrent "principal" .) ($currentPage.IsMenuCurrent "principal" .) }} active{{end}}">
+            <a class="first-level-link" href="{{.URL}}">
+              {{ .Name }}
+              <svg viewBox="0 0 8 8" class="caret">
+                <use xlink:href="/open-iconic.svg#caret-bottom"></use>
+              </svg>
+            </a>
+            <ul class="second-level">
+              {{ range .Children.ByWeight }}
+                <li class="second-level-item{{if $currentPage.IsMenuCurrent "principal" . }} active{{end}}">
+                  <a class="second-level-link" href="{{.URL}}"> {{ .Name }} </a>
+                </li>
+              {{ end }}
+            </ul>
           </li>
-          {{ end }}
-        </ul>
-      </li>
-      {{ else }}
-      <li class="first-level-item{{if or ($currentPage.IsMenuCurrent " principal" .)
-        ($currentPage.HasMenuCurrent "principal" .) }} active{{end}}">
-        <a class="first-level-link" href="{{.URL}}">{{ .Name }}</a>
-      </li>
-      {{ end }}
+        {{ else }}
+          <li class="first-level-item{{if or ($currentPage.IsMenuCurrent "principal" .) ($currentPage.HasMenuCurrent "principal" .) }} active{{end}}">
+            <a class="first-level-link" href="{{.URL}}">{{ .Name }}</a>
+          </li>
+        {{ end }}
+        </li>
       {{ end }}
       <li class="first-level-item go-to-construccion-li">
         <a class="first-level-link" href="https://www.nvtconstruccion.com/" style="color: white">
